package com;

import java.util.Iterator;

public interface Agregado<T> {
    Iterador<T> criarIterador();
}